# Indi

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  README  README.drivers  README.win32.txt  aclocal.m4  configure.in  drivers.xml  eventloop.c  eventloop.h  indi.kdevelop  indi.kdevelop.pcs  indidevapi.h  indidriver.c  indidriver.h  indiserver.c  mkinstalldirs
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2t
branches/cmake-restructure/libindi/: CMakeLists.txt
branches/cmake-restructure/libindi/drivers/: CMakeLists.txt
branches/cmake-restructure/libindi/drivers/agent/: CMakeLists.txt
branches/cmake-restructure/libindi/drivers/auxiliary/: CMakeLists.txt
branches/cmake-restructure/libindi/drivers/focuser/: CMakeLists.txt
branches/cmake-restructure/libindi/libs/indibase/alignment/: CMakeLists.txt
branches/cmake-restructure/libindi/tools/: CMakeLists.txt
branches/libindi-align/: CMakeLists.txt  Doxyfile  indidriver.c
branches/libindi-align/drivers/telescope/: lx200generic.cpp  skywatcherAPI.cpp  skywatcherAPI.h  skywatcherAPIMount.cpp  skywatcherAPIMount.h
branches/libindi-align/libs/indibase/: basedevice.cpp
branches/libindi-align/libs/indibase/alignment/: AlignmentSubsystem.cpp  AlignmentSubsystem.h  Common.h  (+34 more)
branches/libindi-guider/drivers/ccd/: ccd_simulator.cpp
branches/libindi-guider/libs/indibase/: indiccd.cpp  indiccd.h
branches/libindi-win/: CMakeLists.txt  README.win32.txt  indidevapi.h  indidriver.c  indidriver.h  indidrivermain.c
branches/libindi-win/drivers/focuser/: robofocus.cpp
branches/libindi-win/examples/: tutorial_dome.c  tutorial_rain.c  tutorial_three.c
branches/libindi-win/examples/tutorial_five/: dome.cpp
branches/libindi-win/libs/: indicom.c  indicom.h
branches/libindi-win/libs/indibase/: indiccd.cpp  inditelescope.cpp
drivers/filter_wheel/: trutech_wheel.c
drivers/focuser/: robofocus.cpp  robofocus.h  tcfs.cpp
drivers/telescope/: celestronprotocol.c  skywatcherAPI.cpp  skywatcherAPI.h  skywatcherAPIMount.cpp  skywatcherAPIMount.h
examples/: tutorial_four.cpp  tutorial_one.c  tutorial_three.c
libindi/drivers/auxiliary/: CMakeLists.txt
libindi/drivers/filter_wheel/: CMakeLists.txt
libindi/drivers/telescope/: CMakeLists.txt
libindi/drivers/video/: CMakeLists.txt
libindi/examples/tutorial_six/: tutorial_client.cpp
libindi/libs/: CMakeLists.txt
libindi/libs/indibase/: CMakeLists.txt
libs/: indicom.c  strsep.c  strsep.h
libs/indibase/: baseclient.cpp  baseclient.h  basedevice.cpp  defaultdevice.cpp  defaultdevice.h  indiccd.cpp  indiccd.h  inditelescope.cpp  inditelescope.h
libs/indibase/alignment/: AlignmentSubsystem.cbp  AlignmentSubsystem.cpp  AlignmentSubsystem.h  AlignmentSubsystemBase.cpp  AlignmentSubsystemBuiltInMathPlugin.cpp  AlignmentSubsystemBuiltInMathPlugin.h  AlignmentSubsystemDriver.cpp  AlignmentSubsystemForClients.cpp  AlignmentSubsystemForClients.h  AlignmentSubsystemForDrivers.cpp  AlignmentSubsystemForDrivers.h  AlignmentSubsystemForMathPlugins.h  BuiltInMathPlugin.cpp  BuiltInMathPlugin.h  CMakeLists.txt  ClientAPIForAlignmentDatabase.cpp  ClientAPIForAlignmentDatabase.h  ClientAPIForMathPluginManagement.cpp  ClientAPIForMathPluginManagement.h  Common.h  ConvexHull.cpp  ConvexHull.h  Doxyfile  DummyMathPlugin.cpp  DummyMathPlugin.h  InMemoryDatabase.cpp  InMemoryDatabase.h  LoaderClient.cpp  LoaderClient.h  MapPropertiesToInMemoryDatabase.cpp  MapPropertiesToInMemoryDatabase.h  MathPlugin.h  MathPluginManagement.cpp  MathPluginManagement.h  MathPluginManagerClient.cpp  TODO and Ideas  TelescopeDirectionVectorSupportFunctions.cpp  TelescopeDirectionVectorSupportFunctions.h  dummy.cpp
src/: .cvsignore  Makefile.am  Makefile.include  README  base64.c  celestronprotocol.c  eventloop.c  indiapi.h  indicom.c  indicom.h  indidevapi.h  indidrivermain.c  indiserver.c  lilxml.h  lx200autostar.cpp  lx200driver.c  lx200generic.cpp  sbigcam.cpp  sbigudrv.h  trutech_wheel.c
src/cfitsio/: Makefile.am
src/drivers/: Makefile.am
src/drivers/ccd/: Makefile.am  indialta.c  sbigcam.cpp
src/drivers/examples/: Makefile.am  ngc1316o.fits  tutorial_ccdpreview  tutorial_ccdpreview.c  tutorial_dome  tutorial_dome.c  tutorial_one  tutorial_one.c  tutorial_rain  tutorial_rain.c  tutorial_three  tutorial_three.c  tutorial_two  tutorial_two.c
src/drivers/filter_wheel/: Makefile.am
src/drivers/focuser/: Makefile.am
src/drivers/telescope/: Makefile.am  lx200_16.h  lx200ap.cpp  lx200ap.h  lx200autostar.cpp  lx200classic.cpp  lx200generic.cpp  lx200generic.h
src/drivers/video/: Makefile.am
src/examples/: Makefile  README  tutorial_ccdpreview.c  tutorial_dome.c  tutorial_one.c  tutorial_rain.c  tutorial_three.c  tutorial_two.c
src/libs/: Makefile.am  lilxml.h
src/libs/apogee/: ApnCamData.cpp  ApnCamData_CCD3011.cpp  ApnCamData_CCD3011B.cpp  ApnCamData_CCD4240.cpp  ApnCamData_CCD4240B.cpp  ApnCamData_CCD4710.cpp  ApnCamData_CCD4710ALT.cpp  ApnCamData_CCD4710B.cpp  ApnCamData_CCD4720.cpp  ApnCamData_CCD4720B.cpp  ApnCamData_CCD5520.cpp  ApnCamData_CCD5520B.cpp  ApnCamData_CCD5710.cpp  ApnCamData_CCD5710B.cpp  ApnCamData_CCD5710F.cpp  ApnCamData_CCD7700.cpp  ApnCamData_CCD7700B.cpp  ApnCamData_KAF0261E.cpp  ApnCamData_KAF0261EB.cpp  ApnCamData_KAF0401E.cpp  ApnCamData_KAF0401EB.cpp  ApnCamData_KAF09000.cpp  ApnCamData_KAF10011105.cpp  ApnCamData_KAF1001E.cpp  ApnCamData_KAF1001EB.cpp  ApnCamData_KAF1001ENS.cpp  ApnCamData_KAF1301E.cpp  ApnCamData_KAF1301EB.cpp  ApnCamData_KAF1401E.cpp  ApnCamData_KAF1602E.cpp  ApnCamData_KAF1602EB.cpp  ApnCamData_KAF16801E.cpp  ApnCamData_KAF16803.cpp  ApnCamData_KAF3200E.cpp  ApnCamData_KAF3200EB.cpp  ApnCamData_KAF4202.cpp  ApnCamData_KAF6303E.cpp  ApnCamData_KAF6303EB.cpp  ApnCamData_KAI11000C.cpp  ApnCamData_KAI11000CL.cpp  (+23 more)
src/libs/fli/: Makefile.in
src/libs/webcam/: Makefile.am  Makefile.in
src/tools/: Makefile  compiler.c  evalINDI.c  getINDIproperty.c  setINDIproperty.c
src/webcam/: Makefile.am
tags/AlignmentSubsystemBeta1/libs/indibase/: basedevice.cpp
tools/: evalINDI.c  getINDIproperty.c  setINDIproperty.c
(+2 files in other folders)
