lib_LTLIBRARIES = libapogee.la

libapogee_la_SOURCES = ApnCamData.cpp \
	ApnCamData_CCD3011.cpp \
	ApnCamData_CCD3011B.cpp \
	ApnCamData_CCD4240.cpp \
	ApnCamData_CCD4240B.cpp \
	ApnCamData_CCD4710.cpp \
	ApnCamData_CCD4710ALT.cpp \
	ApnCamData_CCD4710B.cpp \
	ApnCamData_CCD4720.cpp \
	ApnCamData_CCD4720B.cpp \
	ApnCamData_CCD5520.cpp \
	ApnCamData_CCD5520B.cpp \
	ApnCamData_CCD5710.cpp \
	ApnCamData_CCD5710B.cpp \
	ApnCamData_CCD5710F.cpp \
	ApnCamData_CCD7700.cpp \
	ApnCamData_CCD7700B.cpp \
	ApnCamData_KAF0261E.cpp \
	ApnCamData_KAF0261EB.cpp \
	ApnCamData_KAF0401E.cpp \
	ApnCamData_KAF0401EB.cpp \
	ApnCamData_KAF09000.cpp \
	ApnCamData_KAF10011105.cpp \
	ApnCamData_KAF1001E.cpp \
	ApnCamData_KAF1001EB.cpp \
	ApnCamData_KAF1001ENS.cpp \
	ApnCamData_KAF1301E.cpp \
	ApnCamData_KAF1301EB.cpp \
	ApnCamData_KAF1401E.cpp \
	ApnCamData_KAF1602E.cpp \
	ApnCamData_KAF1602EB.cpp \
	ApnCamData_KAF16801E.cpp \
	ApnCamData_KAF16803.cpp \
	ApnCamData_KAF3200E.cpp \
	ApnCamData_KAF3200EB.cpp \
	ApnCamData_KAF4202.cpp \
	ApnCamData_KAF6303E.cpp \
	ApnCamData_KAF6303EB.cpp \
	ApnCamData_KAI11000C.cpp \
	ApnCamData_KAI11000CL.cpp \
	ApnCamData_KAI11000M.cpp \
	ApnCamData_KAI11000ML.cpp \
	ApnCamData_KAI2001CL.cpp \
	ApnCamData_KAI2001M.cpp \
	ApnCamData_KAI2001ML.cpp \
	ApnCamData_KAI2020C.cpp \
	ApnCamData_KAI2020CL.cpp \
	ApnCamData_KAI2020CLB.cpp \
	ApnCamData_KAI2020M.cpp \
	ApnCamData_KAI2020ML.cpp \
	ApnCamData_KAI2020MLB.cpp \
	ApnCamData_KAI4020C.cpp \
	ApnCamData_KAI4020CL.cpp \
	ApnCamData_KAI4020CLB.cpp \
	ApnCamData_KAI4020M.cpp \
	ApnCamData_KAI4020ML.cpp \
	ApnCamData_KAI4020MLB.cpp \
	ApnCamData_TH7899.cpp \
	ApnCamTable.cpp \
	ApnCamera.cpp \
	ApnCamera_USB.cpp \
	ApogeeUsbLinux.cpp \
	ApnGlue.cpp

libapogee_la_LIBADD = -lm -lusb
libapogee_la_CPPFLAGS = -DLINUX
